--- a/master_text.tex
+++ b/master_text.tex
@@ -93,7 +93,7 @@
         \input{pages/chapter2.tex}
         \input{pages/chapter3.tex}
         \input{pages/chapter4.tex}
-        \input{pages/chapter5.tex}
+        %\input{pages/chapter5.tex}
         \input{pages/chapter6.tex}
     \xjtuendcontent
 
