--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -29,7 +29,31 @@
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
-
+    \begin{figure*}[!h]
+    \centering
+    \includegraphics[width=\textwidth]{./figures/c4_overview_1.jpg}
+    \begin{minipage}[t]{0.23\linewidth}
+    \centerline{ \small (a) 场景文字原图}
+    \end{minipage}
+    \begin{minipage}[t]{0.43\linewidth}
+    \centerline{ \small (b) 粗略定位结果}
+    \end{minipage}
+    \begin{minipage}[t]{0.23\linewidth}
+    \centerline{ \small (c) 统计边缘响应}
+    \end{minipage}
+    \includegraphics[width=\textwidth]{./figures/c4_overview_2.jpg}
+    \begin{minipage}[t]{0.13\linewidth}
+    \centerline{ \small (e) 候选文本行生成}
+    \end{minipage}
+    \begin{minipage}[t]{0.53\linewidth}
+    \centerline{ \small (f) 基于二叉树搜索的文本行优化}
+    \end{minipage}
+    \begin{minipage}[t]{0.23\linewidth}
+    \centerline{ \small (g) 细致定位结果}
+    \end{minipage}
+    \caption{基于二叉树搜索的文本行定位优化的流程图}
+    \label{fig.c4_overview}
+    \end{figure*}
 
     \section{候选文字行的提取}
     \esection{Candidate text line's extraction}
@@ -135,7 +159,7 @@
 
     然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$ 的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
-    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$ 中各变量的含义后，由$L$构建$N$ 的过程如算法\ref{alg:c4_build_binary_tree} 所示：
+    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$ 中各变量的含义后，由$L$ 构建$N$ 的过程如算法\ref{alg:c4_build_binary_tree} 所示：
 
     \begin{algorithm}[!h]
 	\renewcommand{\algorithmicrequire}{\textbf{输入:}}
@@ -207,7 +231,7 @@
     	  \end{algorithmic}
         \end{algorithm}
 
-        算法\ref{alg:c4_binary_tree_search} 的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法\ref{alg:c4_binary_tree_search} 就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
+        算法\ref{alg:c4_binary_tree_search} 的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法\ref{alg:c4_binary_tree_search} 就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1] 须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
 
         以上过程是算法\ref{alg:c4_binary_tree_search} 的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$ 个三元组$p$的路径集合$P$就被构建了出来。
 
@@ -233,9 +257,9 @@
         \esubsection{Searching strategies}
         \label{sec.c4_searching strategies}
 
-        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3 项策略中选出并仅选出1 种：
+        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$ 为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3 项策略中选出并仅选出1 种：
 
-        （1）保留父亲结点$n_5$ 所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域；
+        （1）保留父亲结点$n_5$ 所代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域；
 
         （2）仅保留子结点$n_7$ 所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$ 所代表的单独的文本行区域；
 
@@ -253,7 +277,7 @@
         \label{fig.c4_search_strategy}
         \end{figure}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -263,7 +287,7 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13)测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
+        为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13) 测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
 
         最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
@@ -278,9 +302,9 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
+        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013 上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
         \begin{table}[!h]
         \centering
@@ -302,7 +326,7 @@
         \label{tab.c4_icdar13}
         \end{table}
 
-        如表\ref{tab.c4_icdar11}所示，在ICDAR 2011 文字测试数据集上，本章提出的基于二叉树搜索的文字检测方法与上一章提出的He\cite{He2017scene}的方法，以及其它最先进的的文字检测方法如Cho\cite{Cho2016Canny}、Sung\cite{Sung2015Scene} 等的方法都进行了字符提取数目和检出率的量化对比。从实验结果上来看，本章提出的方法可以在获得最高文字检出率的同时，保证提取的字符数目最少。该实验说明表明，相对于其它先进文字检测方法而言，本章方法都达到更优的文字查全和查准效果的折衷。
+        如表\ref{tab.c4_icdar11}所示，在ICDAR 2011 文字测试数据集上，本章提出的基于二叉树搜索的文字检测方法与上一章提出的He\cite{He2017scene} 的方法，以及其它最先进的的文字检测方法如Cho\cite{Cho2016Canny}、Sung\cite{Sung2015Scene} 等的方法都进行了字符提取数目和检出率的量化对比。从实验结果上来看，本章提出的方法可以在获得最高文字检出率的同时，保证提取的字符数目最少。该实验说明表明，相对于其它先进文字检测方法而言，本章方法都达到更优的文字查全和查准效果的折衷。
 
         \begin{table}[!h]
         \centering
@@ -334,7 +358,7 @@
 
         在第\ref{sec.c4_searching strategies}节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
 
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading}提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
         \begin{table*}[!h]
         \centering
@@ -357,8 +381,8 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13}所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt}所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
-        
+        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13}所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+
         \begin{figure}[!h]
         \centering
         \includegraphics[width=\textwidth]{c4_results_ic13.jpg}
