--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -29,6 +29,8 @@
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
+    基于二叉树搜索的文字检测方法的具体流程如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene}来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
+
     \begin{figure*}[!h]
     \centering
     \includegraphics[width=\textwidth]{./figures/c4_overview_1.jpg}
@@ -43,17 +45,19 @@
     \end{minipage}
     \includegraphics[width=\textwidth]{./figures/c4_overview_2.jpg}
     \begin{minipage}[t]{0.13\linewidth}
-    \centerline{ \small (e) 候选文本行生成}
+    \centerline{ \small (d) 候选文本行生成}
     \end{minipage}
     \begin{minipage}[t]{0.53\linewidth}
-    \centerline{ \small (f) 基于二叉树搜索的文本行优化}
+    \centerline{ \small (e) 基于二叉树搜索的文本行优化}
     \end{minipage}
     \begin{minipage}[t]{0.23\linewidth}
-    \centerline{ \small (g) 细致定位结果}
+    \centerline{ \small (f) 细致定位结果}
     \end{minipage}
     \caption{基于二叉树搜索的文本行定位优化的流程图}
     \label{fig.c4_overview}
     \end{figure*}
+    
+    在得到场景文字图像的统计边缘响应后，为了获得更精准的文字定位结果，需要首先生成大量的候选文本行来覆盖文本行定位的各种可能情况。因此在这里我们通过对统计边缘响应进行水平投影，求取梯度，以及执行非极大值抑制等操作，获得如图\ref{fig.c4_overview}(d)所示的候选文本行，其中红色的线就是分割开各个候选文本行的分割线。值得注意的是，长度更长的红线表明线两边的文本行更应该被分割开来，而长度较短的红线表明该分割线更可能导致文本行的过分割，因此更应该将短线两边的候选文本行融合在一起成为1个单独的文本行。接下来进入本章的核心步骤：如图\ref{fig.c4_overview}(e) 所示，由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果，如图\ref{fig.c4_overview}(f)所示，这也是经过优化后得到的文字细致定位结果，相比于原\ref{fig.c4_overview}(b)的粗略定位结果而言，其文字检测的精度得到了大幅提升。
 
     \section{候选文字行的提取}
     \esection{Candidate text line's extraction}
@@ -251,7 +255,7 @@
         \label{fig.c4_bianry_tree_search}
         \end{figure}
 
-        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
+        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
@@ -277,7 +281,7 @@
         \label{fig.c4_search_strategy}
         \end{figure}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -381,7 +385,7 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13}所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
 
         \begin{figure}[!h]
         \centering
