--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,6 +47,29 @@
   year={2010},
 }
 
+@inproceedings{Epshtein2010Detecting,
+  title={Detecting text in natural scenes with stroke width transform},
+  author={Epshtein, Boris and Ofek, Eyal and Wexler, Yonatan},
+  booktitle={Computer Vision and Pattern Recognition},
+  pages={2963-2970},
+  year={2010},
+}
+
+@book{Moral2010Foundations,
+  title={Foundations and Trends® in Machine Learning},
+  author={Moral, Pierre Del and Hu, Peng and Wu, Liming},
+  publisher={Now Publishers Inc.},
+  year={2010},
+}
+
+@inproceedings{Neumann2011Text,
+  title={Text Localization in Real-World Images Using Efficiently Pruned Exhaustive Search},
+  author={Neumann, Lukas and Matas, Jiri},
+  booktitle={文档分析与识别国际会议},
+  pages={687-691},
+  year={2011},
+}
+
 @inproceedings{Wang2012End,
   title={End-to-end text recognition with convolutional neural networks},
   author={Wang, Tao and Wu, D. J and Coates, A and Ng, A. Y},
@@ -93,6 +116,14 @@
   title={End-to-End Text Recognition with Hybrid HMM Maxout Models},
   author={Alsharif, Ouais and Pineau, Joelle},
   journal={Computer Science},
+  year={2013},
+}
+
+@inproceedings{Karatzas2013ICDAR,
+  title={ICDAR 2013 Robust Reading Competition},
+  author={Karatzas, Dimosthenis and Shafait, Faisal and Uchida, Seiichi and Iwamura, Masakazu and Bigorda, Lluis Gomez I. and Mestre, Sergi Robles and Mas, Joan and Mota, David Fernandez},
+  booktitle={International Conference on Document Analysis and Recognition},
+  pages={1484-1493},
   year={2013},
 }
 
@@ -145,6 +176,26 @@
   volume={37},
   number={8},
   pages={1558-70},
+  year={2015},
+}
+
+@article{Ye2015Text,
+  title={Text Detection and Recognition in Imagery: A Survey},
+  author={Ye, Qixiang and Doermann, David},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={37},
+  number={7},
+  pages={1480-1500},
+  year={2015},
+}
+
+@article{Yu2015Text,
+  title={Text detection and recognition in natural scene with edge analysis},
+  author={Yu, Chong and Song, Yonghong and Meng, Quan and Zhang, Yuanlin},
+  journal={Computer Vision Iet},
+  volume={9},
+  number={4},
+  pages={603-613},
   year={2015},
 }
 
