--- a/bibliography.bib
+++ b/bibliography.bib
@@ -151,6 +151,12 @@
   year={2014},
 }
 
+@article{Huang2014Robust,
+  title={Robust Scene Text Detection with Convolution Neural Network Induced MSER Trees},
+  author={Huang, Weilin and Qiao, Yu and Tang, Xiaoou},
+  year={2014},
+}
+
 @inproceedings{Sung2015Scene,
   title={Scene text detection with robust character candidate extraction method},
   author={Sung, Myung Chul and Jun, Bongjin and Cho, Hojin and Kim, Daijin},
@@ -196,6 +202,14 @@
   volume={9},
   number={4},
   pages={603-613},
+  year={2015},
+}
+
+@inproceedings{Zhang2015Symmetry,
+  title={Symmetry-based text line detection in natural scenes},
+  author={Zhang, Zheng and Shen, Wei and Yao, Cong and Bai, Xiang},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={2558-2567},
   year={2015},
 }
 
