--- a/pages/chapter1.tex
+++ b/pages/chapter1.tex
@@ -86,14 +86,16 @@
 
     \section{国内外研究现状}
     \esection{Related Work}
-    
+
     自然场景图像中的文字检测和识别是计算机视觉领域的研究热点，国内外的很多学者在从事该方面的研究，他们也提出了很多的方法来解决这个问题，而Ye 等人\cite{Ye2015Text}对这些方法进行了调研和总结。 同时，在国际会议ICDAR 上举办了多次关于文字检测的比赛“Robust Reading”\cite{Karatzas2013ICDAR}，自然场景中的文字检测及识别就是其中的一项比赛内容，不仅为从事文字检测方面研究的人提供了交流的机会，而且也反映了当时文字检测的最先进水平。
-    
+
     自然场景图像中的文字检测方法按照其处理对象的不同，可分为基于纹理的方法和基于区域的方法：基于纹理的文字检测方法，把文字当作一种特殊纹理，通常通过局部颜色对比度、笔划滤波器、频域变换等方法来刻画文字的纹理特征。在确定纹理特征提取方式之后，往往会使用各种分类模型训练文字-背景分类器，以滑动窗的形式判断图像局部区域内是否包含文字，由此生成文字概率图。之后通过聚类或图像分割等方法取得候选文字行或文字区域，再经过后处理生成最终的检测结果。为检测不同尺寸的文字，基于纹理的方法往往需要在输入图像的不同尺度的图像上都进行同样的纹理特征提取和区域分类，或设计不同大小的纹理特征提取模板在同一个滑动窗内提取多次特征，并进行多尺度的结果融合。因此这类方法比较耗时；基于区域的文字检测方法，通常利用文字具有与背景差异明显且均一的颜色这一特征，从输入图像中提取出有限个数的候选文字区域，然后使用一些经验性的规则，或者提取区域的几何、纹理等特征，使用分类模型来滤除掉背景区域。基于区域的方法通常要比基于纹理的方法效率更高，因为基于区域的方法需要处理的区域数目有限。但这类方法的缺点在于，文字区域由于光照、遮挡、模糊等原因，内部颜色分布差异变大，或者边缘模糊，往往会在提取候选文字区域时被漏检，会直接影响最终检测结果。
-    
+
     2010年，Epshtein\cite{Epshtein2010Detecting}等人提出了笔画宽度变换（SWT）来计算图像中每个像素的笔画，基于像素笔画产生候选文字连通区域，去掉非文字连通区域就得到文字检测结果。笔画是组成文字的基本元素，通过计算笔画来检测文字是文字检测中非常有意义的研究进展；2011年，Neumann和Matas\cite{Neumann2011Text} 使用最稳定极值区域（MSER）作为候选文字区域，通过有效剪枝可以详尽搜索所有可能文字序列，并利用高阶文字属性（文字行）对候选区域进行区分从而确定文字区域；2012 年，Tu\cite{Tu2012Detecting}等提出了一种检测自然图像中任意方向的文字的方法，他们使用SWT来获得候选文字连通区域，然后通过单个连通区域的分析和连通区域行的分析来去掉非文字部分，保留下来的连通区域就是文字检测的结果；2014年，Yin\cite{Yin2013Robust}等设计了一个快速有效的剪枝算法来提取图像中的最稳定机制区域（MSER）作为候选文字连通区域，他们通过一个单链聚类算法将候选文字链接成候选文字行，这个聚类算法的距离权重和聚类阈值是通过一个自训练距离度量学习算法自动学习到的，通过贝叶斯模型利用字符分类器计算候选文字的后验概率，从而将文字检测出来；2015年，Yu\cite{Yu2015Text} 等提出了一种基于边缘分析的文字检测方法，他们使用边缘重组来产生候选文字连通区域，然后通过单个连通区域分析、连通区域行分析对候选文字进行验证，得到最终的文字检测结果。
+
+    近些年，随着深度学习\cite{Moral2010Foundations} 的兴起，它被广泛用于目标检测识别任务，例如手写字符识别、交通标志识别等，同时取得了非常好的结果，大大提升了目标检测识别的水平。鉴于深度学习的良好表现，许多人也将深度学习用于自然场景中的文字检测。2012年，Wang\cite{Wang2012End}等提出基于深度学习的文字检测方法，他们利用一个包含2个卷积层的卷积神经网络（CNN）对滑动窗进行分类，然后对重叠的窗口利用非极大抑制进行筛选就得到了文字检测结果；2014年，Huang\cite{Huang2014Robust} 等使用MSER来产生候选文字连通区域，然后利用CNN计算每个候选文字连通区域属于文字的可能性，最后将属于文字的可能性比较高的连通区域串成文字行产生最终的检测结果；同时，他们提出来一种用于分开粘连文字的方法，基于CNN和滑动窗可以将一个连通区域中含有的多个粘连文字分开；2015年，Zhang\cite{Zhang2015Symmetry} 等利用滑动窗提取文字的对称性特征，从而计算每个像素属于文字行对称轴的概率，然后在此基础之上形成候选文字行，最后使用CNN将非文字部分去掉，剩下的就是文字区域；2016年，Jaderburg\cite{Jaderberg2016Reading}等首先利用一组互补的感兴趣区域（proposal）生成技术来确保检测阶段的高查全率，后续用高效的过滤阶段来提高查准率。最后用生成文本数据（synthetic text data）训练出的非常深的卷积神经网络来对检测阶段得到的包围框内的文字进行识别。
     
-    近些年，随着深度学习\cite{Moral2010Foundations}的兴起，它被广泛用于目标检测识别任务，例如手写字符识别、交通标志识别等，同时取得了非常好的结果，大大提升了目标检测识别的水平。鉴于深度学习的良好表现，许多人也将深度学习用于自然场景中的文字检测。
+    ICDAR 2015 Competition on Robust Reading是第五次关于自然场景中文字检测的国际比赛。该次比赛的获胜方法结果是R=0.80,P=0.90, 反映了目前自然场景中文字检测的最先进水平，这说明自然场景中的文字检测和识别目前还未达到可以商用的水平。近些年虽然获得了很多的关注和巨大的发展，但是自然场景图像中的文字检测和识别仍然是一个非常有挑战的问题。这是因为自然场景图像的背景一般比较复杂，其中各种语言、大小、字体、排列方向等的文字都可能会出现,由于光线条件影响，文字可能会过暗或过亮，还可能出现图像失真和退化，导致自然场景中的文字检测非常困难。
 
     \section{本文研究内容}
     \esection{Research Contents}
