--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -23,11 +23,13 @@
 \chapter{论文相关理论与技术}
 \echapter{Relative Theory and Technology}
 
-    \section{基于连通部件的场景文字检测方法}
-    \esection{Connected Component-based Method}
+    文字检测按照其研究目标和存储介质的不同，可分为数字图像文字检测、视频图像中的文字检测和自然场景图像中的文字检测。其中，由于自然场景中的文字会遭受背景复杂多样性，以及图像质量易被光照、阴影、遮挡等环境因素影响，致使自然场景图像的文字检测相比于其它图像对检测算法的健壮性要求更高。这些年来，学者们在文字检测领域进行了大量的研究和实验工作，提出了许多不同的方法，检测效果也在逐年提升。但是在ICDAR等公开数据集上的测试结果表明，目前的这些自然场景图像中的文字检测结果仍有提高空间，所以仍是文字检测领域内的一个热点方向。场景图像文字检测方法根据流程不同，可分为基于区域、连通部件以及边缘三类方法。下面整理并分别介绍近年来这三类文字检测的相关方法。
 
     \section{基于区域的场景文字检测方法}
     \esection{Region-based Method}
+
+    \section{基于连通部件的场景文字检测方法}
+    \esection{Connected Component-based Method}
 
     \section{基于边缘的场景文字检测方法}
     \esection{Edge-based Method}
