--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -28,6 +28,17 @@
     \section{基于区域的场景文字检测方法}
     \esection{Region-based Method}
 
+    基于区域的文字检测方法，是基于文子有别于背景的视觉特征来区分文字区域与背景区域的。使用较多的视觉特征主要包括纹理、边缘及颜色等。因为每个文字都是用来传递信息的特定符号，其纹理与一般背景并不相同，同时文字相比于背景也有着更强的对比度和显著的颜色，所以包含着文字的那些区域和背景图像区域有着不同的视觉特征，因而可以用来区分文字区域与非文字区域。
+    
+    \begin{figure}[!h]
+    \centering
+    \includegraphics[width=\textwidth]{c2_region_based.jpg}
+    \caption{基于区域的文字检测方法的流程示例}
+    \label{fig.c2_region_based}
+    \end{figure}
+    
+    大部分基于区域的方法一般都会利用滑动窗来获取候选的包含文字的局部图像区域，因此在有些方法中也称其为基于滑动窗的文字检测算法。如图\ref{fig.c2_region_based} 所示，这是1个典型的基于区域的文字检测方法的流程示例。在该流程示例中，首先利用滑动窗来得到局部图像区域以作为候选区域，然后提取区域中的颜色、纹理等视觉特征，最后结合分类器以进行文字与非文字区域的分类判别，输出结果是检测出来的文字区域。
+
     \section{基于连通部件的场景文字检测方法}
     \esection{Connected Component-based Method}
 
