--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,6 +29,14 @@
   year={2004},
 }
 
+@inproceedings{Chen2004Detecting,
+  title={Detecting and reading text in natural scenes},
+  author={Chen, Xiangrong and Yuille, A. L},
+  booktitle={Computer Vision and Pattern Recognition, 2004. CVPR 2004. Proceedings of the 2004 IEEE Computer Society Conference on},
+  pages={366-373},
+  year={2004},
+}
+
 @article{Wolf2006Object,
   title={Object count/area graphs for the evaluation of object detection and segmentation algorithms},
   author={Wolf, Christian and Jolion, Jean Michel},
@@ -67,6 +75,16 @@
   author={Neumann, Lukas and Matas, Jiri},
   booktitle={文档分析与识别国际会议},
   pages={687-691},
+  year={2011},
+}
+
+@article{Pan2011A,
+  title={A Hybrid Approach to Detect and Localize Texts in Natural Scene Images},
+  author={Pan, Yi Feng and Hou, Xinwen and Liu, Cheng Lin},
+  journal={IEEE Transactions on Image Processing A Publication of the IEEE Signal Processing Society},
+  volume={20},
+  number={3},
+  pages={800},
   year={2011},
 }
 
