--- a/bibliography.bib
+++ b/bibliography.bib
@@ -278,6 +278,14 @@
   year={2016},
 }
 
+@book{Yu2016Scene,
+  title={Scene text localization using edge analysis and feature pool},
+  author={Yu, Chong and Song, Yonghong and Zhang, Yuanlin},
+  publisher={Elsevier Science Publishers B. V.},
+  pages={652-661},
+  year={2016},
+}
+
 @inproceedings{He2017scene,
   title={SCENE TEXT DETECTION BASED ON SKELETON-CUT DETECTOR},
   author={He, Xiang and Song, Yong-Hong and Zhang, Yuan-Lin},
