--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -30,6 +30,8 @@
 
     基于区域的文字检测方法，是基于文子有别于背景的视觉特征来区分文字区域与背景区域的。使用较多的视觉特征主要包括纹理、边缘及颜色等。因为每个文字都是用来传递信息的特定符号，其纹理与一般背景并不相同，同时文字相比于背景也有着更强的对比度和显著的颜色，所以包含着文字的那些区域和背景图像区域有着不同的视觉特征，因而可以用来区分文字区域与非文字区域。
 
+    大部分基于区域的方法一般都会利用滑动窗来获取候选的包含文字的局部图像区域，因此在有些方法中也称其为基于滑动窗的文字检测算法。如图\ref{fig.c2_region_based} 所示，这是1个典型的基于区域的文字检测方法的流程示例。在该流程示例中，首先利用滑动窗来得到局部图像区域以作为候选区域，然后提取区域中的颜色、纹理等视觉特征，最后结合分类器以进行文字与非文字区域的分类判别，输出结果是检测出来的文字区域。
+
     \begin{figure}[!h]
     \centering
     \includegraphics[width=\textwidth]{c2_region_based.jpg}
@@ -37,9 +39,9 @@
     \label{fig.c2_region_based}
     \end{figure}
 
-    大部分基于区域的方法一般都会利用滑动窗来获取候选的包含文字的局部图像区域，因此在有些方法中也称其为基于滑动窗的文字检测算法。如图\ref{fig.c2_region_based} 所示，这是1个典型的基于区域的文字检测方法的流程示例。在该流程示例中，首先利用滑动窗来得到局部图像区域以作为候选区域，然后提取区域中的颜色、纹理等视觉特征，最后结合分类器以进行文字与非文字区域的分类判别，输出结果是检测出来的文字区域。
-
     Chen等\cite{Chen2004Detecting}利用滑动窗扫描得到文字区域并获取区域中的79个特征，然后构造4个级联的Adaboost 分类器来分类和筛选这些候选文字区域，最后用OCR软件识别图像中文字信息。其中4个级联的分类器是由不同的文字底层特征构造而成的弱分类器，通过利用Adaboost方法将这些弱分类器组合学习而获得1个分类文字与背景的强分类器。用于训练弱分类器的三组特征分别是：候选区域内竖直和水平方向灰度的标准差与平均值；区域内的统计梯度信息；区域内边缘组合特征。而本方法中使用的79个特征，分散在4层的级联分类器中，分别有1、10、30和50维文字特征。最后OCR使用的技术是用Niblack方法来二值化检测到的文字区域以识别出图像中的文字。
+    
+    Pan等\cite{Pan2011A}设计了一种基于滑动窗的文本区域的检测器，用于估算图像金字塔中的文本行存在的置信度和尺度信息，在每个尺度中使用滑动窗扩得到候选文字区域并利用WaldBoost分了器对各个窗口的文字置信度进行预测。然后该文利用基于连通部件类别中的局部二值化方法对候选文本分量进行分割。为有效的过滤掉非文本的部件，这篇文章提出了一个考虑一元组件的属性和二元上下文的成分关系的条件随机场（CRF）模型。其中，一元特征表征单个部件自身的文字置信度，例如有占空比、紧密度、轮廓梯度以及宽高比等；而二元特征表征相邻候选文字连通部件即上下文的关系，如颜色、形状、尺度和距离等差异。最后基于能量最小化方法将这些文本组件分类到文本行中。
 
     \begin{table*}[!h]
     \centering
