--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -40,8 +40,12 @@
     \end{figure}
 
     Chen等\cite{Chen2004Detecting}利用滑动窗扫描得到文字区域并获取区域中的79个特征，然后构造4个级联的Adaboost 分类器来分类和筛选这些候选文字区域，最后用OCR软件识别图像中文字信息。其中4个级联的分类器是由不同的文字底层特征构造而成的弱分类器，通过利用Adaboost方法将这些弱分类器组合学习而获得1个分类文字与背景的强分类器。用于训练弱分类器的三组特征分别是：候选区域内竖直和水平方向灰度的标准差与平均值；区域内的统计梯度信息；区域内边缘组合特征。而本方法中使用的79个特征，分散在4层的级联分类器中，分别有1、10、30和50维文字特征。最后OCR使用的技术是用Niblack方法来二值化检测到的文字区域以识别出图像中的文字。
-    
+
     Pan等\cite{Pan2011A}设计了一种基于滑动窗的文本区域的检测器，用于估算图像金字塔中的文本行存在的置信度和尺度信息，在每个尺度中使用滑动窗扩得到候选文字区域并利用WaldBoost分了器对各个窗口的文字置信度进行预测。然后该文利用基于连通部件类别中的局部二值化方法对候选文本分量进行分割。为有效的过滤掉非文本的部件，这篇文章提出了一个考虑一元组件的属性和二元上下文的成分关系的条件随机场（CRF）模型。其中，一元特征表征单个部件自身的文字置信度，例如有占空比、紧密度、轮廓梯度以及宽高比等；而二元特征表征相邻候选文字连通部件即上下文的关系，如颜色、形状、尺度和距离等差异。最后基于能量最小化方法将这些文本组件分类到文本行中。
+    
+    上述文字检测方法一般使用人工设计的特征，例如颜色、纹理、笔画宽度等，进行文字与非文字分类。虽然这些特征可以区分大多数的文字与非文字，部分与文字相似的背景却难以区分，例如窗户、砖块等。为了能够更好地反映文字的属性，近年来许多方法开始采用深度学习技术，其中最常用的一种结构是卷积神经网络（CNN）。CNN是一种特殊的前馈人工神经网络，其中的神经元之间的连接关系类似于视觉皮层的结构。同时，因为CNN能够利用图像中的局部空间相关性，故CNN特别适合于处理计算机视觉问题，尤其是目标识别领域，例如在手写字符识别、交通标志识别、图像分类等方面都取得了优秀的表现。
+    
+    
 
     \begin{table*}[!h]
     \centering
