--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -110,7 +110,7 @@
     \label{fig.c2_cca_based}
     \end{figure}
     
-    
+    Epshetein等\cite{Epshtein2010Detecting}提出用笔画宽度变换方法SWT来检测文字，促进了基于边缘（是连通部件中的一种）的文字检测算法的研究。这个方法根据图像里的文字笔画的宽度通常较为均一的属性，来过滤掉非文字边缘的像素。该方法首先利用Canny算子在场景文字图像的灰度图上求取图像中各目标的边缘，然后执行笔画宽度转换算法来计算笔画宽度图，其关键思路为：以边缘上的每个像素点为起始位置，沿该起始位置的梯度正负方向出发进行搜索，以找到梯度方向与起始位置点的方向近似相反的另一个边缘点，那么标记两像素点间的距离即为这个边缘的笔画宽度。在笔画宽度转换之后，再利用连通部件方法聚合起具有相近笔画宽度的像素点，以生成候选文字区域并方便后续的连通部件分析。最后使用启发性规则，例如欧拉数、宽高比等特征来过滤以得到真实文字区域。
 
     \begin{table*}[!h]
     \centering
